plugins {
    id 'org.springframework.boot' version '2.7.18' // Java 8 지원하는 마지막 버전
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    // toolchain: 빌드 JVM 과 무관하게 JDK 8 로 컴파일/실행 (없으면 자동 다운로드)
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}



repositories {
    mavenCentral()
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude module: 'spring-boot-starter-logging'
    }
    implementation 'ch.qos.logback:logback-classic:1.2.13'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

bootRun {
    systemProperties = [ 'file.encoding': 'UTF-8' ]
    sourceResources sourceSets.main
}

test {
    useJUnitPlatform()
    options {
        systemProperties(System.getProperties())
        systemProperties.remove("java.awt.headless")
    }
    systemProperty 'file.encoding', 'UTF-8'
}

tasks.withType(JavaCompile){
    options.encoding = "UTF-8"
}
